show loader till ffmpeg initialize

--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -3,6 +3,12 @@
   <div class="rounded relative flex flex-col">
     <div class="font-bold mb-6">Upload Video</div>
 
+    <ng-container>
+      <span *ngIf="!ffmpegService.isReady; else uploadEditorCont" class="material-icons text-center text-6xl p-8 animate-spin">
+        settings
+      </span>
+    </ng-container>
+    <ng-template #uploadEditorCont>
     <!-- Upload Dropbox -->
     <ng-container *ngIf="!nextStep; else uploadFormContainer">
       <div app-event-blocker (dragend)="isDragOver = false" (dragover)="isDragOver = true"
@@ -52,5 +58,6 @@
         </div>
       </form>
     </ng-template>
+  </ng-template>
   </div>
 </section>
